Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
+++ b/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
@@ -19,7 +19,7 @@ Para abrir a transação, é necessário informar o nome do arquivo de configura
 
 ## 1.1. Exemplos de conectores
 
-A seguir um exemplo de um conector para SQLite:
+A seguir um exemplo de um conector para **SQLite**:
 
 ```php
 <?php
@@ -34,7 +34,7 @@ return [
 ];
 ```
 
-A seguir um exemplo de um conector para PostgreSQL:
+A seguir um exemplo de um conector para **PostgreSQL**:
 
 ```php
 <?php
@@ -49,7 +49,7 @@ return [
 ];
 ```
 
-A seguir um exemplo de um conector para MySQL:
+A seguir um exemplo de um conector para **MySQL**:
 
 ```php
 <?php
@@ -66,9 +66,9 @@ return [
 ];
 ```
 
-Obs: Para usar com encoding iso, adicionar "char = ISO"
+**Obs**.: Para usar com encoding iso, adicionar "char = ISO"
 
-A seguir um exemplo de um conector para SQLServer:
+A seguir um exemplo de um conector para **SQLServer**:
 
 ```php
 <?php
@@ -85,9 +85,9 @@ return [
 ];
 ```
 
-Obs: O type mssql utiliza driver dblib (FreeTDS) para Linux e sqlsrv (Fornecido pela MS) para windows. Use também type=dblib ou type=sqlsrv para indicar o driver específico. "ntyp" é válido apenas para o driver "sqlsrv", habilita retorno de campos numéricos como tipos numéricos do PHP. A opção "opts" é necessária a partir do PHP8 em uso com o driver fornecido pela MS.
+**Obs**.: O type **mssql** utiliza driver **dblib** (FreeTDS) para **Linux** e **sqlsrv** (Fornecido pela MS) para Windows. Use também `type=dblib` ou `type=sqlsrv` para indicar o driver específico. "ntyp" é válido apenas para o driver "sqlsrv", habilita retorno de campos numéricos como tipos numéricos do PHP. A opção "opts" é necessária a partir do PHP8 em uso com o driver fornecido pela MS.
 
-A seguir um exemplo de um conector para Oracle:
+A seguir um exemplo de um conector para **Oracle**:
 
 ```php
 <?php
@@ -107,7 +107,7 @@ return [
 ];
 ```
 
-A seguir um exemplo de um conector para Oracle com TNS:
+A seguir um exemplo de um conector para **Oracle com TNS**:
 
 ```php
 <?php
@@ -132,7 +132,7 @@ return [
 ];
 ```
 
-A seguir um exemplo de um conector para Firebird:
+A seguir um exemplo de um conector para **Firebird**:
 
 ```php
 <?php
