--- a/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
+++ b/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
@@ -66,7 +66,7 @@ return [
 ];
 ```
 
-**Obs**.: Para usar com encoding iso, adicionar "char = ISO"
+**Obs.:** Para usar com encoding iso, adicionar "char = ISO"
 
 A seguir um exemplo de um conector para **SQLServer**:
 
@@ -85,7 +85,7 @@ return [
 ];
 ```
 
-**Obs**.: O type **mssql** utiliza driver **dblib** (FreeTDS) para **Linux** e **sqlsrv** (Fornecido pela MS) para Windows. Use também `type=dblib` ou `type=sqlsrv` para indicar o driver específico. "ntyp" é válido apenas para o driver "sqlsrv", habilita retorno de campos numéricos como tipos numéricos do PHP. A opção "opts" é necessária a partir do PHP8 em uso com o driver fornecido pela MS.
+**Obs.:** O type **mssql** utiliza driver **dblib** (FreeTDS) para **Linux** e **sqlsrv** (Fornecido pela MS) para Windows. Use também `type=dblib` ou `type=sqlsrv` para indicar o driver específico. "ntyp" é válido apenas para o driver "sqlsrv", habilita retorno de campos numéricos como tipos numéricos do PHP. A opção "opts" é necessária a partir do PHP8 em uso com o driver fornecido pela MS.
 
 A seguir um exemplo de um conector para **Oracle**:
 
