--- a/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
+++ b/api-banco-de-dados/c01-transacoes-em-banco-de-dados.mdx
@@ -66,7 +66,7 @@ return [
 ];
 ```
 
-**Obs.:** Para usar com encoding iso, adicionar "char = ISO"
+**Obs.:** Para usar com encoding iso, adicionar `char = ISO`.
 
 A seguir um exemplo de um conector para **SQLServer**:
 
