Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c02-carregamento-de-objetos.mdx
+++ b/api-banco-de-dados/c02-carregamento-de-objetos.mdx
@@ -42,7 +42,7 @@ O código-fonte acima irá gerar exatamente a mesma query que o exemplo anterior
     SELECT * FROM funcionario WHERE (id = 1)
 ```
 
-## Qual a diferença entre o carregamento normal e o estático?
+## 2.1. Qual a diferença entre o carregamento normal e o estático?
 
 Acabamos de ver que os dois carregamentos de objetos demonstrados têm como resultado a mesma query, então ficamos com a pergunta: qual a diferença entre eles?
 
