Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c06-manipulacao-de-colecoes.mdx
+++ b/api-banco-de-dados/c06-manipulacao-de-colecoes.mdx
@@ -12,7 +12,7 @@ Operações possíveis de serem executadas em coleções:
 4.	Atualizar;
 5.	Excluir.
 
-## O que são coleções?
+## 6.1. O que são coleções?
 
 Para ficar mais claro, veja o exemplo a seguir:
 
