Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c10-atualizacao-de-colecoes-em-lote.mdx
+++ b/api-banco-de-dados/c10-atualizacao-de-colecoes-em-lote.mdx
@@ -7,7 +7,7 @@ O Adianti Framework possibilita que o desenvolvedor atualize dados em uma coleç
 1.	Atualização estática;
 2.	Atualização com repositório e critério.
 
-**Atualização estática**
+## 10.1. Atualização estática
 
 Para atualizar uma coleção de forma estática, o desenvolvedor deve estabelecer os critérios da mesma maneira que o carregamento estático, através das funções `where()`.
 
@@ -43,7 +43,7 @@ O comando SQL gerado foi:
     UPDATE cliente SET sexo = 'F' WHERE (id < 172 AND sexo is NULL)
 ```
 
-**Atualização com repositório e critério**
+## 10.2. Atualização com repositório e critério
 
 Agora, a mesma atualização será realizada com uma classe de repositório e um critério de filtros:
 
