Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c13-exclusao-de-colecoes.mdx
+++ b/api-banco-de-dados/c13-exclusao-de-colecoes.mdx
@@ -40,7 +40,7 @@ O comando SQL gerado foi:
     DELETE FROM cliente WHERE (idade < '15' AND sexo = 'M')
 ```
 
-**Deletar uma coleção de forma estática**
+## 13.1. Deletar uma coleção de forma estática
 
 Assim como podemos deletar uma coleção usando a API de critérios, podemos deletar uma coleção usando o método estático `delete()`. Ele é usado da mesma maneira que o carregamento estático: primeiro é necessário estabelecer os filtros com a função `where()` e depois a função `delete()`.
 
