--- a/api-banco-de-dados/c15-como-carregar-um-vetor-indexado-pelos-atributos-de-uma-tabela.mdx
+++ b/api-banco-de-dados/c15-como-carregar-um-vetor-indexado-pelos-atributos-de-uma-tabela.mdx
@@ -41,7 +41,7 @@ O vetor resultado terá o ID dos registros como chave e a descrição como valor
     $vetor['ID'] = 'DESCRICAO';
 ```
 
-**Como filtrar os registros carregados pela função `getIndexedArray()` ?**
+## 15.1. Como filtrar os registros carregados pela função `getIndexedArray()`?
 
 A função `getIndexedArray()` aceita uma API de critérios como terceiro parâmetro, facilitando os filtros na hora de carregar uma coleção indexada. Um exemplo seria carregar todos os códigos e nomes dos clientes do sexo masculino:
 
