Documentation edits made through Mintlify web editor

--- a/rest-api/mestre-detalhe.mdx
+++ b/rest-api/mestre-detalhe.mdx
@@ -1,8 +1,8 @@
 ---
-title: '5. Trabalhando com Mestre-Detalhe'
-description: 'O `ApiResourceController` simplifica operações de mestre-detalhe, permitindo gerenciar um registro principal (o "mestre") e seus registros relacionados (os "detalhes") em uma única requisição. O caso de uso mais comum é um **Pedido de Venda** (mestre) e seus **Itens** (detalhes).
+title: "5. Trabalhando com Mestre-Detalhe"
+description: "O ApiResourceController simplifica operações de mestre-detalhe, permitindo gerenciar um registro principal (o mestre) e seus registros relacionados (os detalhes) em uma única requisição. O caso de uso mais comum é um **Pedido de Venda** (mestre) e seus **Itens** (detalhes).
 
-Este capítulo mostra como configurar e usar essa funcionalidade passo a passo.'
+Este capítulo mostra como configurar e usar essa funcionalidade passo a passo."
 ---
 
 ## Passo 1: Habilitando o Relacionamento
@@ -91,7 +91,7 @@ Veja um exemplo de requisição GET para um pedido com detalhes:
 
 Com tudo configurado, você pode criar um pedido e seus itens com uma única requisição `POST`.
 
-**Exemplo de requisição `POST /api/pedido-venda`:**
+**`Exemplo de requisição POST /api/pedido-venda:`**
 
 ![Requisição POST com detalhes](https://monosnap.com/image/l8iitL2CVOln78cDVd2Ms5LlrBfpaJ)
 
