--- a/rest-api/parametros.mdx
+++ b/rest-api/parametros.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Obtendo Parâmetros da URL no Controller/Service"
-description: "Este guia mostra como capturar e trabalhar com parâmetros enviados pela URL em seus controllers (ou services), seja através de parâmetros na rota ou através do objeto `Request`.
+title: "Obtendo Parâmetros da URL"
+description: "Este guia mostra como capturar e trabalhar com parâmetros enviados pela URL em seus controllers (ou services), seja através de parâmetros na rota ou através do objeto Request.
 
-Quando criamos rotas personalizadas (como vimos no capítulo anterior), frequentemente precisamos obter dados enviados pelo cliente. Esses dados podem vir de diferentes formas: parâmetros na URL, query strings, headers HTTP, corpo da requisição, cookies e até mesmo tokens de autenticação."
+Quando criamos rotas personalizadas (como vimos no capítulo anterior), frequentemente precisamos obter dados enviados pelo cliente. Esses dados podem vir de diferentes formas: parâmetros na URL, query strings, headers HTTP, corpo da requisição, cookies e até mesmo tokens de autenticação. "
 ---
 
 ## Passo 1: Parâmetros de Rota Diretamente no Método
