Documentation edits made through Mintlify web editor

--- a/rest-api/configurando-controller.mdx
+++ b/rest-api/configurando-controller.mdx
@@ -1,7 +1,6 @@
 ---
-title: "4. Configurando o API Controller"
-description: " É importante conhecer algumas propriedades fundamentais do ApiResourceController que você pode ajustar para controlar o comportamento básico do seu endpoint.
-A primeira parte desse guia irá abordar propriedades fundamentais e outras relacionadas à visualização de dados — em outras palavras, requisições GET."
+title: "5. Configurando o API Controller"
+description: " É importante conhecer algumas propriedades fundamentais do ApiResourceController que você pode ajustar para controlar o comportamento básico do seu endpoint. A primeira parte desse guia irá abordar propriedades fundamentais e outras relacionadas à visualização de dados — em outras palavras, requisições GET."
 ---
 
 ### Chave Primária (`$primaryKey`)
